2001-11-30  Mikael Hallendal  <micke@codefactory.se>

	* src/scrollkeeper-parser.c:
	(sp_parse_section): renamed from sp_tree_parse_section.
	(sp_parse_doc): renamed from sp_tree_parse_doc
	(sp_parse_doc_toc): added (not impl. yet).
	(sp_get_xml_docpath): added. Handles retrieving the xml doc path
	 from a scrollkeeper-* output.
	(sp_get_xml_tree_of_locale): moved the
	 scrollkeeper-get-content-list stuff to sp_get_xml_docpath. Now use
	 it instead.

	* src/main.c (main): don't run gtk_init, using gnome-program.

	* src/scrollkeeper-parser.c: renamed internal functions to sp_ to
	  get the names shorter.

2001-11-27  Richard Hult  <rhult@codefactory.se>

	* src/scrollkeeper-parser.c: Include string.h to get rid of a
	warning.

	* src/*.h: Fix build by including glib-object.h instead of
	gobject/gobject.h everywhere. 

2001-11-16    <micke@codefactory.se>

        * vfs-help-module: removed, included in platform now.
	
	* configure.in: don't build vfs-help-module, it's now in libgnome.

	* Makefile.am (SUBDIRS): dito

	* src/yelp-view.c (yelp_view_url_requested_cb): GNOME_VFS_PRIORITY
	  fixed to work with resent changes in API.
	(yelp_view_open_uri): dito.

2001-10-29  Mikael Hallendal  <micke@codefactory.se>

	* src/main.c (main): if argument is passed, pass that argument to
	  yelp_window_open_uri.

	* src/yelp-window.c (yelp_window_open_uri): added/impl.

2001-10-28  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c (yelp_window_uri_selected_cb): don't segfault
	if uri == NULL.
	
	* src/yelp-base.c (yelp_base_new): use the scrollkeeper parser
	instead of devhelp.

	* src/scrollkeeper-parser.c:
	(scrollkeeper_parser_parse): call _trim_ with doc->xmlRootNode.
	(scrollkeeper_parser_trim_empty_branches): now actually works.
	(scrollkeeper_parser_parse_book): don't call ..._tree_empty. All
	empty branches has been removed.
	(scrollkeeper_parser_tree_parse_section): dito.

	* src/yelp-book.c (yelp_book_section_new): accept uri == NULL and